--- a/content/docs/ru/user/index.mdx
+++ b/content/docs/ru/user/index.mdx
@@ -2,7 +2,7 @@
 title: Добро пожаловать!
 ---
 
-impoexpo — проект, позволяющий переносить ваши данные из разных интеграций при помощи [диаграмм потоков данных](https://ru.wikipedia.org/wiki/DFD). 
+impoexpo — проект, позволяющий переносить ваши данные из разных сервисов при помощи [диаграмм потоков данных](https://ru.wikipedia.org/wiki/DFD). 
 Не пугайтесь данных слов, на самом деле всё намного проще :)
 
 Если вы разрабатываете интеграции для impoexpo, то [вы попали не в то место](/developer). 
@@ -12,7 +12,8 @@ impoexpo — проект, позволяющий переносить ваши 
 
 В документации часто будут использоваться следующие термины:
 
-- Граф — конструкция, состоящая из узлов и рёбер, соединяющих узлы между собой. Именно он описывает то, как надо переносить данные.
-- Узел — единица структуры графа, принимающая на вход некоторые данные, и выдающая на выходе другие данные. Если вы немного шарите за математику, то это,
-по сути, определение функции: `f(in) = out`
-- Ребро — единица структуры графа, соединяющая входные данные одного узла с выходными данными другого узла (или наоборот). Ребра описывают, как "текут" ваши данные.
+- Граф — конструкция, состоящая из узлов и рёбер. Именно он описывает то, как следует переносить данные.
+- Узел — единица структуры графа, принимающая на вход некоторые данные, и выдающая на выходе другие данные. 
+Если вы немного шарите за математику, то это, по сути, определение функции: `f(in) = out`
+- Ребро — единица структуры графа, соединяющая входные данные одного узла с выходными данными другого узла (или наоборот). 
+Ребра описывают, как "текут" ваши данные.
