--- a/content/docs/en/user/nodes/array.mdx
+++ b/content/docs/en/user/nodes/array.mdx
@@ -1,9 +1,9 @@
 ---
-title: Массив
+title: Arrays
 icon: mdi:script-text-outline
 ---
 
-## Длина массива
+## Length of array
 
 <Wrapper>
     ![length of array](./img/array-length.png)
