add date-time section & update screenshots for literals

--- a/content/docs/ru/user/nodes/conditional.mdx
+++ b/content/docs/ru/user/nodes/conditional.mdx
@@ -54,7 +54,8 @@ icon: mdi:question-mark
         required: true,
         type: "number",
         description: "Количество повторений, которых стоит выполнить.",
-        io: "input"
+        io: "input",
+        default: "0"
     },
     "итерация": {
         required: true,
